--- a/package.json
+++ b/package.json
@@ -84,18 +84,20 @@
   "devDependencies": {
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^9.0.18",
-    "@storybook/addon-onboarding": "^9.0.18",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-onboarding": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "^9.0.18",
-    "@storybook/react": "^9.0.18",
+    "@storybook/nextjs": "^8.6.14",
+    "@storybook/react": "^8.6.14",
     "@storybook/testing-library": "^0.2.0",
+    "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "babel-jest": "^30.0.5",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
@@ -109,7 +111,7 @@
     "lint-staged": "^16.1.2",
     "plop": "^4.0.1",
     "prettier": "^3.6.2",
-    "storybook": "^9.0.18"
+    "storybook": "^8.6.14"
   },
   "browserslist": [
     ">0.3%",
